@@ -1015,6 +1015,7 @@ Users_Guide/en-US/images/test—image.png
 Users_Guide/en-US/Installing_a_Brand.xml
 Users_Guide/en-US/Installing_Publican.xml
 Users_Guide/en-US/Installing_Publican_Debian.xml
+Users_Guide/en-US/Installing_Publican_Docker.xml
 Users_Guide/en-US/Installing_Publican_OpenSuse.xml
 Users_Guide/en-US/Introduction.xml
 Users_Guide/en-US/Language_Codes.xml
