@@ -42,6 +42,7 @@
 \bTest_Book\b
 \bTest_DB5_Book\b
 \bTest_Set\b
+\bUsers_Guide/en-US/images/original_drupal\b
 \bUsers_Guide-DB5\b
 \.log$
 \bpublican-Test_Brand\b
