@@ -29,7 +29,7 @@
 	<author>
 		<firstname>Sven</firstname>
 		 <surname>Dowdeit</surname>
-		 <contrib>Debian installation instructions</contrib>
+		 <contrib>Debian and Docker installation instructions</contrib>
 	</author>
 	<author>
 		<firstname>Norman</firstname>
