@@ -50,7 +50,9 @@ NEXT UNRELEASED
 - Update CLI translations
 - Various fixes to Common Content + update Common Content translation. BZ #1027248
 - Update and correct Debian installation instructions. BZ #1013934
-- Correct OpenSUSE installation instructions. BZ #1013934
+- Correct OpenSUSE installation instructions. BZ #1000534
+- Add Docker installation instructions. BZ #1015943
+- Clarify where relative paths are used in brand instructions  - BZ#1028815
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
